--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@ node_modules/
 dist/
 .vscode/
 .vs/
+__pycache__/
+src/test/scenarios/testserver/input/
 package-lock.json
 tmpoutput
 .history
-__pycache__/
 test-results.xml
-
 *.njsproj
 *.user
 *.orig
