--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -81,6 +81,8 @@ stages:
           git clone --single-branch -b azure-core-preview https://github.com/Azure/azure-cli.git ../azure-cli
           echo -e "\e[32m[$(date -u)] LOG: Clone azure-cli-extensions"
           git clone --single-branch -b master https://github.com/Azure/azure-cli-extensions.git ../azure-cli-extensions
+          echo -e "\e[32m[$(date -u)] LOG: Clone autorest.testserver"
+          git clone --single-branch -b master https://github.com/Azure/autorest.testserver.git ../autorest.testserver
         displayName: 'Clone Branch'
       - script: |
           echo -e "\e[32m[$(date -u)] LOG: Install and upgrade Pip"
@@ -97,20 +99,25 @@ stages:
           pip install azdev
           echo -e "\e[32m[$(date -u)] LOG: Install autorest"
           npm install -g autorest
-          echo -e "\e[32m[$(date -u)] LOG: Go to azure-cli folder"
-          cd ../azure-cli
           echo -e "\e[32m[$(date -u)] LOG: Azdev setup"
+          cd ../azure-cli
           azdev setup -r ../azure-cli-extensions
+          echo -e "\e[32m[$(date -u)] LOG: test server setup"
+          cd ../autorest.testserver
+          npm install
         displayName: 'Prepare env'
       - script: |
           CURRENT_VERSION=$(node -p "require('./package.json').version")
           echo -e "\e[32m[$(date -u)] LOG: CURRENT AZ VERSION: $CURRENT_VERSION"
           echo -e "\e[32m[$(date -u)] LOG: Active venv"
           . /opt/venv/bin/activate
-          echo -e "\e[32m[$(date -u)] LOG: Go to azure-cli folder"
-          cd ../azure-cli
+          echo -e "\e[32m[$(date -u)] LOG: Start test server"
+          cd ../autorest.testserver
+          npm start &
+          echo -e "\e[32m[$(date -u)] LOG: Az login"
+          az login --service-principal -u $(USER_SERVICE_PRINCIPAL_ID) -p $(USER_SERVICE_PRINCIPAL_SECRET) --tenant $(USER_SERVICE_PRINCIPAL_TENANT)
           echo -e "\e[32m[$(date -u)] LOG: Start test script"
-          pytest -s ../s/.scripts/e2e/testcases.py --all --az $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)/$(VAR_ARIFACT_NAME)/autorest-az-$CURRENT_VERSION.tgz --swagger ../azure-rest-api-specs --cliext ../azure-cli-extensions --junitxml=../s/.scripts/e2e/test-results.xml
+          pytest -s ../s/.scripts/e2e/testcases.py --all --az ../s --azpack $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)/$(VAR_ARIFACT_NAME)/autorest-az-$CURRENT_VERSION.tgz --swagger ../azure-rest-api-specs --cliext ../azure-cli-extensions --testserver ../autorest.testserver --junitxml=../s/.scripts/e2e/test-results.xml
         displayName: 'Pytest'
       - task: PublishTestResults@2
         condition: always()
