--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "autorest": "^3.0.6187",
     "await-exec": "^0.1.2",
     "dir-compare": "^2.2.0",
+    "fs": "0.0.1-security",
     "js-yaml": "^3.13.1",
     "node-yaml": "^3.2.0"
   },
