--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -57,6 +57,8 @@ stages:
   condition: succeeded()
   jobs:
     - job: E2E
+      timeoutInMinutes: 120
+      cancelTimeoutInMinutes: 10
       pool:
         vmImage: 'ubuntu-latest'
       steps:
