--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "dir-compare": "^2.2.0",
     "fs": "0.0.1-security",
     "js-yaml": "^3.13.1",
-    "node-yaml": "^3.2.0"
+    "node-yaml": "^3.2.0",
+    "request-promise-native": "1.0.8"
   },
   "files": [
     "dist"
