--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "fs": "0.0.1-security",
     "js-yaml": "^3.13.1",
     "node-yaml": "^3.2.0",
-    "request-promise-native": "1.0.8"
+    "request-promise-native": "1.0.8",
+    "request": "^2.87.0"
   },
   "files": [
     "dist"
