--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 variables:
-  NodeVersion: '10.x'
+  NodeVersion: '12.16.1'
   VAR_BUILD_ARTIFACT_STAGING_DIRECTORY: $(Build.ArtifactStagingDirectory)
   VAR_ARIFACT_NAME: "drop"
 
