--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -13,6 +13,7 @@ schedules:
     - master
 
 variables:
+  NodeVersion: 10.x
   VAR_REPO_URL: $(Build.Repository.Uri)
   VAR_REPO_BRANCHNAME: $(Build.SourceBranchName)
   VAR_BUILD_NUMBER: $(Build.BuildNumber)
@@ -30,7 +31,7 @@ stages:
       steps:
       - task: NodeTool@0
         inputs:
-          versionSpec: '12.16.1'
+          versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js'
       - script: |
           echo -e "\e[32m[$(date -u)] LOG: Ensure latest npm is installed"
@@ -70,7 +71,7 @@ stages:
           downloadPath: '$(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)'
       - task: NodeTool@0
         inputs:
-          versionSpec: '12.16.1'
+          versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js'
       - task: UsePythonVersion@0
         displayName: 'Use Python 3.6'
@@ -148,7 +149,7 @@ stages:
       steps:
       - task: NodeTool@0
         inputs:
-          versionSpec: '12.16.1'
+          versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js'
       - script: |
           LAST_TAG_COMMIT_HASH=$(git rev-list --tags --max-count=1)
@@ -213,7 +214,7 @@ stages:
       steps:
       - task: NodeTool@0
         inputs:
-          versionSpec: '12.16.1'
+          versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js'
       - task: DownloadBuildArtifacts@0
         inputs:
@@ -244,7 +245,7 @@ stages:
       steps:
       - task: NodeTool@0
         inputs:
-          versionSpec: '12.16.1'
+          versionSpec: '$(NodeVersion)'
         displayName: 'Install Node.js'
       - task: DownloadBuildArtifacts@0
         inputs:
@@ -281,7 +282,7 @@ stages:
     steps:
     - task: NodeTool@0
       inputs:
-        versionSpec: '12.16.1'
+        versionSpec: '$(NodeVersion)'
       displayName: 'Install Node.js'
     - script: |
         REPO_URL_REPLACE="$(USER_GITHUB_TOKEN)@github"
