--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -13,7 +13,7 @@ schedules:
     - master
 
 variables:
-  NodeVersion: 10.x
+  NodeVersion: '10.x'
   VAR_REPO_URL: $(Build.Repository.Uri)
   VAR_REPO_BRANCHNAME: $(Build.SourceBranchName)
   VAR_BUILD_NUMBER: $(Build.BuildNumber)
