--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -85,6 +85,7 @@ stages:
           git clone --single-branch -b dev https://github.com/Azure/azure-cli.git ../azure-cli
           echo -e "\e[32m[$(date -u)] LOG: Clone azure-cli-extensions"
           git clone --single-branch -b master https://github.com/amecodegenbot/azure-cli-extensions.git ../azure-cli-extensions
+          tree ../azure-cli-extensions
           echo -e "\e[32m[$(date -u)] LOG: Clone autorest.testserver"
           git clone --single-branch -b master https://github.com/Azure/autorest.testserver.git ../autorest.testserver
         displayName: 'Clone Branch'
