--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -5,6 +5,7 @@ variables:
   NodeVersion: '10.x'
   VAR_BUILD_ARTIFACT_STAGING_DIRECTORY: $(Build.ArtifactStagingDirectory)
   VAR_ARIFACT_NAME: "drop"
+  parallelTest: 'true'
 
 jobs:
   - job: TSLint
