--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jszip-sync": "^3.2.1-sync",
     "node-yaml": "^3.2.0",
     "nunjucks": "^3.2.2",
+    "oav": "^2.2.0",
     "prettier": "^2.2.1",
     "request": "^2.87.0",
     "request-promise-native": "1.0.8",
