--- a/package.json
+++ b/package.json
@@ -36,9 +36,15 @@
     "@types/chai": "^4.2.7",
     "@types/mocha": "^5.2.5",
     "@types/node": "10.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "bufferutil": "^4.0.1",
     "chai": "^4.2.0",
-    "eslint": "~5.4.0",
+    "eslint": "^7.16.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.17",
     "node-yaml": "^3.2.0",
