--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -13,10 +13,10 @@ jobs:
       vmImage: 'vs2017-win2016'
     steps:
       - task: Npm@1
-        displayName: 'npm install -g eslint@^7.16.0'
+        displayName: 'npm install'
         inputs:
           verbose: false
-      - script: 'eslint src\index.ts'
+      - script: '.\node_modules\.bin\eslint src\index.ts'
         displayName: 'eslint'
 
   - job: Build
