--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/index.js",
-    "eslint-fix": "eslint . .scripts --ext .js --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
-    "eslint": "eslint . .scripts --ext .js --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/",
+    "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
+    "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/",
     "build": "tsc -p .",
     "start-testserver": "./node_modules/.bin/start-autorest-testserver",
     "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
@@ -36,7 +36,7 @@
     "@types/chai": "^4.2.7",
     "@types/mocha": "^5.2.5",
     "@types/node": "10.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.0",
     "bufferutil": "^4.0.1",
     "chai": "^4.2.0",
