--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,10 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:import/errors",
+        "plugin:import/warnings",
+        "plugin:import/typescript"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -20,6 +23,17 @@
         "prefer-template": 0,
         "linebreak-style": ["error", "windows"],
         "indent": ["error", 4],
-        "no-console": "off"
+        "no-console": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never",
+                "json": "never" 
+            }
+        ]
     }
 }
