--- a/package.json
+++ b/package.json
@@ -63,9 +63,12 @@
     "await-exec": "^0.1.2",
     "compare-versions": "^3.6.0",
     "dir-compare": "^2.2.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "js-yaml": "^3.13.1",
     "jszip-sync": "^3.2.1-sync",
     "node-yaml": "^3.2.0",
+    "prettier": "^2.2.1",
     "request": "^2.87.0",
     "request-promise-native": "1.0.8"
   },
