--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/index.js",
-    "eslint-fix": "eslint  . --fix --ext .ts",
-    "eslint": "eslint  . --ext .ts",
+    "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
+    "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/",
     "build": "tsc -p .",
     "start-testserver": "./node_modules/.bin/start-autorest-testserver",
     "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
@@ -36,9 +36,15 @@
     "@types/chai": "^4.2.7",
     "@types/mocha": "^5.2.5",
     "@types/node": "10.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.0",
     "bufferutil": "^4.0.1",
     "chai": "^4.2.0",
-    "eslint": "~5.4.0",
+    "eslint": "^7.16.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.17",
     "node-yaml": "^3.2.0",
@@ -57,9 +63,12 @@
     "await-exec": "^0.1.2",
     "compare-versions": "^3.6.0",
     "dir-compare": "^2.2.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "js-yaml": "^3.13.1",
     "jszip-sync": "^3.2.1-sync",
     "node-yaml": "^3.2.0",
+    "prettier": "^2.2.1",
     "request": "^2.87.0",
     "request-promise-native": "1.0.8"
   },
