--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@autorest/az",
   "version": "1.7.0",
   "description": "Autorest Azure AZ extension",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "engines": {
     "node": ">=10.12.0"
   },
   "scripts": {
-    "start": "node dist/index.js",
-    "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/index.js",
+    "start": "node dist/src/index.js",
+    "debug": "node --max_old_space_size=4096 --inspect-brk ./dist/src/index.js",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/",
     "build": "tsc -p .",
