--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "js-yaml": "^3.13.1",
     "jszip-sync": "^3.2.1-sync",
     "node-yaml": "^3.2.0",
-    "oav": "file:../../../../Users/changll/Downloads/oav-2.0.1-test-scenario-4.tgz",
+    "oav": "^2.2.0",
     "prettier": "^2.2.1",
     "request": "^2.87.0",
     "request-promise-native": "1.0.8"
