--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
     "watch": "tsc -p . --watch",
     "prepare": "npm run build",
-    "test": "npm run build && mocha dist/test",
+    "test": "npm run build && mocha dist/test --recursive",
     "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
     "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
     "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
